src-tauri/tests/snapshots/pipeline_scenarios__codex_mcp_tool_call_renders_as_tool_call.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: mcp__myserver__query
      tool_call_id: codex-mcp-mcp1
      args_keys:
        - q
      args_text_length: 13
      has_result: true
      result_kind: string
      result_preview: "{\"text\":\"world\"}"
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
