src-tauri/tests/snapshots/pipeline_scenarios__codex_turn_completed_with_duration_shows_result_label.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: 5.4s
  status: ~
  streaming: ~
