src-tauri/tests/snapshots/pipeline_scenarios__codex_web_search_item_renders_as_tool_call.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: WebSearch
      tool_call_id: codex-search-ws1
      args_keys:
        - query
      args_text_length: 35
      has_result: true
      result_kind: string
      result_preview: Search completed
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
