src-tauri/tests/snapshots/pipeline_scenarios__codex_web_search_with_action_passes_through.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: WebSearch
      tool_call_id: codex-search-ws2
      args_keys:
        - action
        - query
      args_text_length: 86
      has_result: true
      result_kind: string
      result_preview: "openai codex\nhttps://openai.com/codex"
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
