src-tauri/tests/snapshots/pipeline_scenarios__collapse_agent_children_mixed_with_text.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: investigate the bug
  status: ~
  streaming: ~
- role: assistant
  id: a1
  content_length: 2
  content:
    - type: tool-call
      tool_name: Agent
      tool_call_id: agent-2
      args_keys:
        - description
      args_text_length: 29
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
      children_count: 3
      children:
        - type: collapsed-group
          category: search
          tools_count: 2
          active: false
          summary: Searched 2 patterns
        - type: text
          text: Now let me read the relevant files.
        - type: collapsed-group
          category: read
          tools_count: 2
          active: false
          summary: Read 2 files
    - type: text
      text: Found the bug in the collapse pass.
  status:
    type: complete
    reason: stop
  streaming: ~
