src-tauri/tests/snapshots/pipeline_scenarios__edge_100_alternating.snap
---
source: tests/pipeline_scenarios.rs
expression: summary
---
total: 100
roles:
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
  - user
  - assistant
first_id: u0
last_id: a99
