src-tauri/tests/snapshots/pipeline_scenarios__edge_no_type_no_role_match.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: x1
  content_length: 1
  content:
    - type: text
      text: Event
  status: ~
  streaming: ~
