src-tauri/tests/snapshots/pipeline_scenarios__edge_non_json_assistant_fallback.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: plain-text streaming
  status:
    type: complete
    reason: stop
  streaming: ~
